--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			<li><a href="#">INTERNET</a></li>
 			<li><a href="#">E-COMMERCE</a></li>
 			<li><a href="#">CONTATO</a></li>
+			<li><a href="#">CONTATO</a></li>
 		</ul>
 	</nav><!-- FIM MENU -->
 	
